ajuste no modal de domentos do usuarios

--- a/templates/users.html
+++ b/templates/users.html
@@ -148,7 +148,7 @@ async function updateSelectedDocuments() {
     const documentsList = document.getElementById('documentsList');
     const selectedDocuments = Array.from(document.querySelectorAll('#documentsList input[type="checkbox"]:checked'))
         .map(checkbox => checkbox.value);
-    const idUser = document.querySelector('input[type="hidden"]').value
+    const idUser = document.querySelector('#documentsList input[type="hidden"]').value
     
     documentsList.innerHTML = '<div class="loading-spinner"></div>';
 
