--- a/templates/users.html
+++ b/templates/users.html
@@ -930,6 +930,11 @@ tr.loading .loading-indicator {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    pointer-events: none;
+}
+
+.modal-content {
+    pointer-events: auto;
 }
 
 .modal-content {
